--- a/WeatherAppVIPER/Main.storyboard
+++ b/WeatherAppVIPER/Main.storyboard
@@ -176,6 +176,113 @@
             </objects>
             <point key="canvasLocation" x="456.80000000000001" y="117.39130434782609"/>
         </scene>
+        <!--City-->
+        <scene sceneID="Xdc-hH-niL">
+            <objects>
+                <viewController storyboardIdentifier="WeatherDetailViewController" id="oXh-tt-8na" customClass="WeatherDetailViewController" customModule="WeatherAppVIPER" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="CR9-p2-Zb0">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ny7-M8-PVy">
+                                <rect key="frame" x="8" y="72" width="201" height="27"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="23"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.75" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c0g-CO-uwR">
+                                <rect key="frame" x="0.0" y="107" width="375" height="94"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="weather_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="V7B-pg-8cv">
+                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="94"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="V7B-pg-8cv" secondAttribute="height" multiplier="2:1" id="vf5-Ac-15S"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="17° C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="URG-3O-EBq">
+                                        <rect key="frame" x="187.5" y="0.0" width="187.5" height="94"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="50"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.75" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="URG-3O-EBq" firstAttribute="leading" secondItem="V7B-pg-8cv" secondAttribute="trailing" id="9wY-Tm-mRq"/>
+                                    <constraint firstAttribute="bottom" secondItem="URG-3O-EBq" secondAttribute="bottom" id="C7V-kN-H01"/>
+                                    <constraint firstItem="V7B-pg-8cv" firstAttribute="top" secondItem="c0g-CO-uwR" secondAttribute="top" id="I04-Nx-o7Y"/>
+                                    <constraint firstAttribute="trailing" secondItem="URG-3O-EBq" secondAttribute="trailing" id="Mcc-ib-mvv"/>
+                                    <constraint firstItem="V7B-pg-8cv" firstAttribute="leading" secondItem="c0g-CO-uwR" secondAttribute="leading" id="N7v-dF-Xg4"/>
+                                    <constraint firstItem="URG-3O-EBq" firstAttribute="width" secondItem="V7B-pg-8cv" secondAttribute="width" id="Tzb-1V-9mx"/>
+                                    <constraint firstItem="URG-3O-EBq" firstAttribute="top" secondItem="c0g-CO-uwR" secondAttribute="top" id="iTk-SP-Jw2"/>
+                                    <constraint firstAttribute="bottom" secondItem="V7B-pg-8cv" secondAttribute="bottom" id="nIa-FU-Eii"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Min Temp" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rpt-PX-9A3">
+                                <rect key="frame" x="8" y="209" width="100" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="KZ2-io-omp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="min" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="55p-qb-aCA">
+                                <rect key="frame" x="116" y="209" width="28" height="20"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.75" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Max Temp" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bst-zN-TFW">
+                                <rect key="frame" x="8" y="237" width="100" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="eD1-zQ-xcX"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="max" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R4I-0S-V5f">
+                                <rect key="frame" x="116" y="237" width="32.5" height="20"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.75" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Ny7-M8-PVy" firstAttribute="top" secondItem="JFR-xy-Hcd" secondAttribute="top" constant="8" id="H9G-fB-QaT"/>
+                            <constraint firstItem="Ny7-M8-PVy" firstAttribute="leading" secondItem="JFR-xy-Hcd" secondAttribute="leading" constant="8" id="HTc-dC-1Jl"/>
+                            <constraint firstItem="c0g-CO-uwR" firstAttribute="trailing" secondItem="JFR-xy-Hcd" secondAttribute="trailing" id="OpA-id-Uo8"/>
+                            <constraint firstItem="JFR-xy-Hcd" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="55p-qb-aCA" secondAttribute="trailing" constant="8" id="QzO-fl-G0y"/>
+                            <constraint firstItem="R4I-0S-V5f" firstAttribute="leading" secondItem="Bst-zN-TFW" secondAttribute="trailing" constant="8" id="ayu-wW-jwI"/>
+                            <constraint firstItem="Rpt-PX-9A3" firstAttribute="top" secondItem="c0g-CO-uwR" secondAttribute="bottom" constant="8" id="cMe-XW-Phr"/>
+                            <constraint firstItem="c0g-CO-uwR" firstAttribute="leading" secondItem="JFR-xy-Hcd" secondAttribute="leading" id="dmu-V4-54D"/>
+                            <constraint firstItem="55p-qb-aCA" firstAttribute="centerY" secondItem="Rpt-PX-9A3" secondAttribute="centerY" id="eTA-MF-gfx"/>
+                            <constraint firstItem="55p-qb-aCA" firstAttribute="leading" secondItem="Rpt-PX-9A3" secondAttribute="trailing" constant="8" id="hJL-5q-JIg"/>
+                            <constraint firstItem="Bst-zN-TFW" firstAttribute="leading" secondItem="JFR-xy-Hcd" secondAttribute="leading" constant="8" id="jSe-fl-brD"/>
+                            <constraint firstItem="Rpt-PX-9A3" firstAttribute="leading" secondItem="JFR-xy-Hcd" secondAttribute="leading" constant="8" id="o1h-9Q-Y3u"/>
+                            <constraint firstItem="c0g-CO-uwR" firstAttribute="top" secondItem="Ny7-M8-PVy" secondAttribute="bottom" constant="8" id="rlz-Ka-7tr"/>
+                            <constraint firstItem="R4I-0S-V5f" firstAttribute="centerY" secondItem="Bst-zN-TFW" secondAttribute="centerY" id="tAe-i5-7hn"/>
+                            <constraint firstItem="Bst-zN-TFW" firstAttribute="top" secondItem="Rpt-PX-9A3" secondAttribute="bottom" constant="8" id="wiS-jZ-FvM"/>
+                            <constraint firstItem="JFR-xy-Hcd" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="R4I-0S-V5f" secondAttribute="trailing" constant="8" id="ylv-EE-LlO"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="JFR-xy-Hcd"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="City" id="2OJ-4J-gVJ"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="imageViewWeatherIcon" destination="V7B-pg-8cv" id="9va-OR-LBy"/>
+                        <outlet property="labelDescription" destination="Ny7-M8-PVy" id="Ebw-pE-0SU"/>
+                        <outlet property="labelMaxTemp" destination="R4I-0S-V5f" id="NjP-PR-9Lg"/>
+                        <outlet property="labelMintemp" destination="55p-qb-aCA" id="SAV-Fs-Qqr"/>
+                        <outlet property="labelTemp" destination="URG-3O-EBq" id="qfe-tm-X7f"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5Qg-56-dXa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1151" y="105"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="1SC-Bz-STz">
             <objects>
